truncate channel description

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "prettier-plugin-tailwindcss": "^0.5.7",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^8.3.1"
   }
 }
