--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "nuxt-icon": "^0.6.6",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "prisma": "^5.7.0",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@faker-js/faker": "^8.3.1"
+    "@faker-js/faker": "^8.3.1",
+    "@prisma/client": "5.7.0",
+    "radix-vue": "^1.2.3"
   }
 }
