--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.10.1",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
@@ -29,6 +31,8 @@
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
     "@prisma/client": "5.7.0",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "radix-vue": "^1.2.3"
   }
 }
