--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
     "@prisma/client": "5.7.0",
+    "@vee-validate/nuxt": "^4.12.2",
+    "@vee-validate/zod": "^4.12.2",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
-    "radix-vue": "^1.2.3"
+    "radix-vue": "^1.2.3",
+    "vee-validate": "^4.12.2",
+    "zod": "^3.22.4"
   }
 }
