--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
+    "@vueuse/core": "^10.7.0",
+    "@vueuse/nuxt": "^10.7.0",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
@@ -30,11 +32,14 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
+    "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "5.7.0",
     "@vee-validate/nuxt": "^4.12.2",
     "@vee-validate/zod": "^4.12.2",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.0.4",
+    "pinia": "^2.1.7",
     "radix-vue": "^1.2.3",
     "vee-validate": "^4.12.2",
     "zod": "^3.22.4"
