--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vee-validate/nuxt": "^4.12.2",
     "@vee-validate/zod": "^4.12.2",
     "bcrypt": "^5.1.1",
+    "emoji-mart-vue-fast": "^15.0.0",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.0.4",
     "pinia": "^2.1.7",
