--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.10.1",
     "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/eslint-plugin-query": "^5.17.22",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
     "@vueuse/core": "^10.7.0",
@@ -34,6 +35,7 @@
     "@faker-js/faker": "^8.3.1",
     "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "5.7.0",
+    "@tanstack/vue-query": "^5.17.19",
     "@vee-validate/nuxt": "^4.12.2",
     "@vee-validate/zod": "^4.12.2",
     "bcrypt": "^5.1.1",
